src/postgres/third-party-extensions/pgrx/pgrx-tests/tests/compile-fail/total-eq-for-postgres_eq.rs
use pgrx::prelude::*;
use serde::{Serialize, Deserialize};

#[derive(Serialize, Deserialize, PartialEq, PostgresType, PostgresEq)]
pub struct BrokenType {
    int: i32,
}

fn main() {}
